Fixed squished images.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,6 +45,7 @@ hr {
 img {
     margin: 10px auto 10px auto;
     max-width: 100%;
+    height: auto;
     display: block;
 }
 
